--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>vladh radio</title>
         <meta charset="utf-8">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://vladh.net/assets/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://vladh.net/assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://vladh.net/assets/favicon-16x16.png">
 <style>
 </style>
     </head>
