add controlslist nodownload

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/pop/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
@@ -76,7 +76,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/japanese-and-korean/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
@@ -100,7 +100,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/classical-post-1945/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
@@ -124,7 +124,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/classical-pre-1945/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
@@ -148,7 +148,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/hyperpop/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
@@ -172,7 +172,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/jazz/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
@@ -196,7 +196,7 @@ SPDX-License-Identifier: GPL-3.0-only
                             </div>
                         </div>
                     </div>
-                    <audio controls="" preload="none">
+                    <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/quiet-indie/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
