--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@ SPDX-License-Identifier: GPL-3.0-only
 <!doctype html>
 <html>
     <head>
-        <title>vladh radio</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+        <title>vladh radio</title>
+        <meta name="description" content="Good jams served daily from London, England, live 24/7.">
+        <meta property="og:site_name" content="vladh radio">
+        <meta property="og:url" content="https://radio.vladh.net">
+        <meta property="og:title" content="vladh radio">
+        <meta property="og:description" content="Good jams served daily from London, England, live 24/7.">
+        <meta property="og:image" content="https://vladh.net/assets/images/logo.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:image:width" content="1000">
+        <meta property="og:image:height" content="1000">
         <link rel="apple-touch-icon" sizes="180x180" href="https://vladh.net/assets/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="https://vladh.net/assets/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://vladh.net/assets/favicon-16x16.png">
