--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ SPDX-License-Identifier: GPL-3.0-only
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+        <meta charset="utf-8"> <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
         <title>vladh radio</title>
         <meta name="description" content="Good jams served daily from London, England, live 24/7.">
         <meta property="og:site_name" content="vladh radio">
@@ -87,6 +86,30 @@ SPDX-License-Identifier: GPL-3.0-only
                     </div>
                     <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/japanese-and-korean/stream192.mp3" type="audio/mpeg">
+                    </audio>
+                </div>
+            </div>
+
+            <div class="station" data-id="quiet-indie">
+                <div class="station__heading">
+                    <h2>Quiet Indie</h2>
+                    <div class="live">live</div>
+                </div>
+                <div class="station__body">
+                    <div class="song">
+                        <div class="song__parts">
+                            <div class="song__art">
+                                <div class="song__disc"></div>
+                            </div>
+                            <div class="song__meta">
+                                <div class="song__title">(song info loading)</div>
+                                <div class="song__artist"></div>
+                                <div class="song__album"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <audio controls="" preload="none" controlslist="nodownload">
+                        <source src="https://radio.vladh.net/listen/quiet-indie/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
             </div>
@@ -183,30 +206,6 @@ SPDX-License-Identifier: GPL-3.0-only
                     </div>
                     <audio controls="" preload="none" controlslist="nodownload">
                         <source src="https://radio.vladh.net/listen/jazz/stream192.mp3" type="audio/mpeg">
-                    </audio>
-                </div>
-            </div>
-
-            <div class="station" data-id="quiet-indie">
-                <div class="station__heading">
-                    <h2>Quiet Indie</h2>
-                    <div class="live">live</div>
-                </div>
-                <div class="station__body">
-                    <div class="song">
-                        <div class="song__parts">
-                            <div class="song__art">
-                                <div class="song__disc"></div>
-                            </div>
-                            <div class="song__meta">
-                                <div class="song__title">(song info loading)</div>
-                                <div class="song__artist"></div>
-                                <div class="song__album"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <audio controls="" preload="none" controlslist="nodownload">
-                        <source src="https://radio.vladh.net/listen/quiet-indie/stream192.mp3" type="audio/mpeg">
                     </audio>
                 </div>
             </div>
